--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,6 @@ h1 {
   height: 100%;
   padding: 0 12px;
 
-  /* min-height: 500px; */
-  /* background-image: url('assets/ocracoke-surf.jpeg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;
-  opacity: 0.5; */
-  /* keep for about page */
-
 }
 
 .header a  {
@@ -65,6 +57,17 @@ h1 {
   flex-direction: column;
 
   /* just a test */
+}
+
+.ocracoke-img {
+  min-height: 500px; 
+  background-image: url('assets/ocracoke-surf.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  /* opacity: 0.5; */
+
+  /* get this to go full width */
 }
 
 
