--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   letter-spacing: 1px;
   color: black;
   margin: 0;
+  scroll-behavior: smooth; 
 }
 
 @media screen  {
@@ -31,6 +32,15 @@ h1 {
   height: 100%;
   padding: 0 12px;
   max-width: 300px;
+}
+
+.header a {
+  text-decoration: none;
+  color: black;
+}
+
+.header a:first-child {
+  border: none;
 }
 
 .surf-forecast{
