--- a/styles.css
+++ b/styles.css
@@ -31,7 +31,7 @@ h1 {
   width: 100%;
   height: 100%;
   padding: 0 12px;
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .header a {
@@ -45,7 +45,13 @@ h1 {
 
 .surf-forecast{
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+  max-width: 250px;
+  border-bottom: 2px solid black;
+}
+
+.surf-forecast p {
+  margin: 0;
 }
 
 .header a  {
@@ -53,7 +59,7 @@ h1 {
   border-top: 2px solid black;
   border-bottom: 2px solid black;
   margin: 0;
-  max-width: 300px;
+  max-width: 350px;
 }
 
 .header a:nth-child(3){
@@ -62,21 +68,66 @@ h1 {
 }
 
 .section {
-  padding: 24px 0;
+  padding: 24px 0 0 0;
 }
 
 .section h2 {
-  max-width: 300px;
+  max-width: 350px;
   width: 100%;
   border-bottom: 2px solid black;
   margin: 0 0 0 12px;;
-  /* padding: 0 12px; */
-  /* max-width: 700px; */
-  /* margin: 0 auto; */
 }
 
 .section p {
   padding: 0 12px;
+  margin: 0;
+}
+
+.section p span{
+  font-weight: bold;
+}
+
+.section .skills {
+  padding: 4px 12px;
+  font-size: 12px;
+  max-width: 350px;
+  margin-left: 0;
+}
+
+.job {
+  padding: 24px 0 0 0;
+}
+
+.job-header{
+
+}
+
+.job-header p {
+  margin: 0;
+  padding: 4px 0 0 12px;
+}
+
+.job-header h3 {
+  font-size: 18px;
+  margin: 0 0 0 12px;
+  max-width: 350px;
+  border-bottom: 2px solid black;
+}
+
+.job ul {
+  margin: 0;
+  padding: 4px 0 4px 40px;
+}
+
+.job .co-description {
+  padding: 4px 12px;
+  font-size: 12px;
+  max-width: 350px;
+  margin-left: 0;
+}
+
+.job a {
+  color: #aaaaaa;
 }
 
 .about {
@@ -85,34 +136,36 @@ h1 {
 }
 
 .about h2 {
-  /* padding: 12px ; */
-  color: white;
-  border-bottom: 2px solid white;
-  margin: 0 0 0 12px;
-  /* text-shadow: 1px 1px 1px gray; */
+  color: black;
+  border-bottom: 2px solid black;
+  margin: 0 0 0 24px;
+  padding: 24px 0 0 0;
+  /* font-weight: bold; */
 }
 
 .about .opacity-wrap {
   height: 100%;
   width: 100%;
-  background-color: rgba(0,0,0,.1); 
   min-height: 600px;
   min-width: 900px;
 }
 
 .about .section-content p {
-  color: white;
+  color: black;
   max-width: 350px;
-  /* text-shadow: 1px 1px 1px gray; */
+  /* padding: 24px 0 0 24px; */
+  padding: 12px 0 0 24px;
+  margin: 0;
+  /* font-weight: bold; */
 }
 
 .main-content{
-  /* max-width: 1000px; */
-  /* padding: 12px; */
   display: flex;
   justify-content: flex-start;
   flex-direction: column;
-  /* padding-left: 148px; */
+  margin: 0 auto;
+  max-width: 900px;
+  padding-bottom: 24px;
 }
 
 .ocracoke-img {
@@ -125,9 +178,35 @@ h1 {
   background-position: center;
 }
 
-.section-content{
-  max-width: 900px;
-  margin: 0 auto;
+ .photo-credit {
+  display: flex;
+  justify-content: flex-end;
+  color: white;
+  font-size: 8px;
+}
+
+ .photo-credit a {
+  color: white;
+  font-size: 8px;
+  text-decoration: none;
+}
+
+.section-content {
+  max-width: 700px;
+  /* margin: 0 auto; */
+}
+
+.contact p {
+  padding: 12px 0 0 12px;
+}
+
+.contact a {
+  color: #aaaaaa;
+  padding-left: 12px;
+}
+
+.contact img {
+ height: 22px;
 }
 
 
