--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,7 @@ h1 {
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  padding-top: 24px;
 }
 
 .header {
@@ -194,6 +195,10 @@ h1 {
 .section-content {
   max-width: 700px;
   /* margin: 0 auto; */
+}
+
+.contact {
+  padding-bottom: 24px;
 }
 
 .contact p {
