--- a/styles.css
+++ b/styles.css
@@ -201,7 +201,7 @@ h1 {
 }
 
 .contact {
-  padding-bottom: 24px;
+  padding-bottom: 48px;
 }
 
 .contact p {
@@ -225,7 +225,7 @@ h1 {
 
 @media only screen and (max-width: 900px) {
   .header {
-    padding: 0;
+    padding: 24px 0 0 0;
   }
 
   .header-container {
