--- a/styles.scss
+++ b/styles.scss
@@ -205,7 +205,7 @@ body {
   }
   
   .contact {
-    padding-bottom: 24px;
+    padding-bottom: 48px;
   }
   
   .contact p {
@@ -232,10 +232,8 @@ body {
 
 @media only screen and (max-width: 900px) {
     .header{
-        padding: 0;
+        padding: 24px 0 0 0;
     }
-
-
 
     .header-container {
         max-width: none;
