--- a/styles.scss
+++ b/styles.scss
@@ -40,6 +40,10 @@ body {
     height: 100%;
     padding: 0 12px;
     max-width: 350px;
+
+    :hover {
+        color: #696969;
+    }
   }
   
   .header a {
@@ -50,12 +54,68 @@ body {
   .header a:first-child {
     border: none;
   }
-  
-  .surf-forecast{
+
+  .surf-forecast-container{
     display: flex;
-    align-items: flex-end;
-    max-width: 250px;
+    flex-direction: column;
+    justify-content: flex-end;
+  }
+  
+  .surf-forecast {
+    color: black;
     border-bottom: 2px solid black;
+
+    .check-button:hover {
+        color: #696969;
+    }
+  }
+
+  .result {
+    display: none;
+  }      
+
+  .active {
+      display: block;
+      animation: fadeIn linear 1s;
+    -webkit-animation: fadeIn linear 1s;
+    -moz-animation: fadeIn linear 1s;
+    -o-animation: fadeIn linear 1s;
+    -ms-animation: fadeIn linear 1s;
+
+    @keyframes fadeIn {
+        0% {opacity:0;}
+        100% {opacity:1;}
+      }
+      
+      @-moz-keyframes fadeIn {
+        0% {opacity:0;}
+        100% {opacity:1;}
+      }
+      
+      @-webkit-keyframes fadeIn {
+        0% {opacity:0;}
+        100% {opacity:1;}
+      }
+      
+      @-o-keyframes fadeIn {
+        0% {opacity:0;}
+        100% {opacity:1;}
+      }
+      
+      @-ms-keyframes fadeIn {
+        0% {opacity:0;}
+        100% {opacity:1;}
+      }
+  }
+
+  .sponsored {
+    font-size: 8px;
+    margin: 0;
+    padding: 4px 0 0 0;
+
+    a {
+        color: #696969;
+    }
   }
   
   
@@ -244,7 +304,7 @@ body {
         }
     }
 
-    .surf-forecast {
+    .surf-forecast-container {
         display: none;
     }
 
