--- a/styles.scss
+++ b/styles.scss
@@ -3,8 +3,6 @@ html {
     height: 100%;
 }
 
-
-
 body {
     width: 100%;
     height: 100%;
@@ -210,6 +208,8 @@ body {
     border-bottom: 2px solid black;
     margin: 0 0 0 24px;
     padding: 24px 0 0 0;
+    text-shadow: 2px 2px 2px #fff;
+    box-shadow: 0px 2px 0px #fff;
   }
   
   .about .about-copy {
@@ -222,6 +222,7 @@ body {
     max-width: 350px;
     padding: 12px 0 0 24px;
     margin: 0;
+    text-shadow: 2px 2px 2px #fff;
   }
   
   .main-content{
