--- a/styles.scss
+++ b/styles.scss
@@ -1,3 +1,7 @@
+// to updated use:
+// sass --watch styles.scss styles.css
+
+
 html {
     width: 100%;
     height: 100%;
@@ -208,8 +212,7 @@ body {
     border-bottom: 2px solid black;
     margin: 0 0 0 24px;
     padding: 24px 0 0 0;
-    text-shadow: 2px 2px 2px #fff;
-    box-shadow: 0px 2px 0px #fff;
+    text-shadow: 2px 0px 2px #fff;
   }
   
   .about .about-copy {
@@ -222,7 +225,7 @@ body {
     max-width: 350px;
     padding: 12px 0 0 24px;
     margin: 0;
-    text-shadow: 2px 2px 2px #fff;
+    text-shadow: 2px 0px 2px #fff;
   }
   
   .main-content{
@@ -341,7 +344,7 @@ body {
             height: 100%;
             width: auto;
             padding: 24px 12px;
-            background-color: rgb(0,0,0,.1);
+            background-color: rgb(0,0,0,.2);
 
             .section-content{
                 max-width: 100%;
@@ -363,6 +366,15 @@ body {
             }
         }
     }
+      
+  .about h2 {
+    text-shadow: none;
+    box-shadow: none;
+  }
+  
+  .about .section-content p {
+    text-shadow: none;
+  }
 }
 
 @media only screen and (max-width: 700px) {
