--- a/styles.scss
+++ b/styles.scss
@@ -15,6 +15,7 @@ body {
     color: black;
     margin: 0;
     scroll-behavior: smooth; 
+	font-weight: 400;
   }
   
   @media screen  {
@@ -48,13 +49,18 @@ body {
     }
   }
   
-  .header a {
+  .header a:not(:first-of-type) {
     text-decoration: none;
     color: black;
+	font-size: 1.5em;
+	font-weight: 600;
   }
   
   .header a:first-child {
     border: none;
+	text-decoration: none;
+    color: black;
+	font-size: 1em
   }
 
   .surf-forecast-container{
@@ -131,6 +137,7 @@ body {
     border-bottom: 2px solid black;
     margin: 0;
     max-width: 350px;
+	font-size: 1.5em;
   }
   
   .header a:nth-child(3){
@@ -155,7 +162,7 @@ body {
   }
   
   .section p span{
-    font-weight: bold;
+    font-weight: 500;
   }
   
   .section .skills {
