--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: "Poppins";
+  src: url("assets/fonts/Poppins-ExtraLight.woff2") format("woff2");
+}
+@font-face {
+  font-family: "Poppins-Bold";
+  src: url("assets/fonts/Poppins-Medium.woff2") format("woff2");
+}
 html {
   width: 100%;
   height: 100%;
@@ -20,8 +28,11 @@ body {
     scroll-behavior: smooth;
   }
 }
+h1, h2, h3, h4, h5, h6 {
+  font-family: "Poppins-Bold";
+}
+
 h1 {
-  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0 0 12px 0;
 }
@@ -48,7 +59,7 @@ h1 {
   text-decoration: none;
   color: black;
   font-size: 1.5em;
-  font-weight: 600;
+  font-family: "Poppins-Bold";
 }
 
 .header a:first-child {
@@ -169,7 +180,7 @@ h1 {
 }
 
 .section p span {
-  font-weight: 500;
+  font-family: "Poppins-Bold";
 }
 
 .section .skills {
