--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,15 @@
 // to updated use:
 // sass --watch styles.scss styles.css
 
+@font-face {
+	font-family: 'Poppins';
+	src:  url('assets/fonts/Poppins-ExtraLight.woff2') format('woff2'),
+}
+@font-face {
+	font-family: 'Poppins-Bold';
+	src:  url('assets/fonts/Poppins-Medium.woff2') format('woff2');
+	
+}
 
 html {
     width: 100%;
@@ -24,8 +33,11 @@ body {
       scroll-behavior: smooth; } }
   
   
+h1,h2,h3,h4,h5,h6{
+	font-family: 'Poppins-Bold';
+}
+
   h1 {
-    font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0 0 12px 0;
   }
@@ -53,7 +65,7 @@ body {
     text-decoration: none;
     color: black;
 	font-size: 1.5em;
-	font-weight: 600;
+	font-family: 'Poppins-Bold';
   }
   
   .header a:first-child {
@@ -162,7 +174,7 @@ body {
   }
   
   .section p span{
-    font-weight: 500;
+	font-family: 'Poppins-Bold';
   }
   
   .section .skills {
